src/user.css
/* ... */
.Root__nav-bar {
  max-width: unset !important;
  height: calc(100% - 48px);
  top: 64px;
}

.main-yourLibraryX-libraryContainer {
  padding-bottom: 0 !important;
}

.main-yourLibraryX-entryPoints {
  border-radius: var(--border-radius-1);
}

.main-yourLibraryX-navItem {
  padding: 2px 0px !important;
}

.main-yourLibraryX-navLink {
  border-radius: var(--border-radius-2);
  min-height: 49px;
  min-width: 49px;
  padding-left: 13px;
  transition: all ease 100ms;
}

.main-yourLibraryX-navLink:hover > .home-icon,
.main-yourLibraryX-navLink:hover > .search-icon {
  background-color: var(--spice-text) !important;
}

.main-yourLibraryX-navLinkActive > .home-active-icon,
.main-yourLibraryX-navLinkActive > .search-active-icon {
  animation: bounce 175ms ease-out forwards;
}

@keyframes bounce {
  0% {
    transform: translate(0, -25%);
  }

  50% {
    transform: translate(0, 25%);
  }

  100% {
    transform: translate(0, 0);
  }
}

.main-yourLibraryX-navLinkActive.active {
  background-color: var(--spice-selected-row);
}

.main-yourLibraryX-navLink-accent {
  position: absolute;
  width: 4px;
  height: 25px;
  background-color: var(--spice-accent);
  border-radius: var(--border-radius-2);
  left: 12px;
  display: none;
}

.home-icon,
.search-icon {
  transition: background-color linear 200ms;
}

.main-yourLibraryX-collapseButton.main-yourLibraryX-collapseButtonIsCollapsed
  > .main-yourLibraryX-button {
  color: var(--spice-subtext);
}

.main-yourLibraryX-collapseButton.main-yourLibraryX-collapseButtonIsCollapsed svg {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_library_24_regular.svg');
  background-color: var(--spice-subtext);
}

.main-yourLibraryX-collapseButton > .main-yourLibraryX-button {
  color: var(--spice-text);
}

.main-yourLibraryX-collapseButton svg {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_library_24_filled.svg');
  background-color: var(--spice-text);
}

.main-yourLibraryX-createButton span {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_add_24_filled.svg');
  background-color: var(--spice-text);
  width: 18px;
  height: 18px;
}

.main-rootlist-wrapper {
  padding-left: unset;
  padding-right: unset;
}

.BoxComponent-group-tinted-isInteractive-hasLeadingOrMedia-paddingBlockStart_8px-paddingBlockEnd_8px-minBlockSize_56px-padding_8px.main-yourLibraryX-listItemGroup {
  background-color: var(--spice-selected-row) !important;
}

.main-yourLibraryX-libraryContainer {
  --background-highlight: var(--spice-selected-row) !important;
  --text-bright-accent: var(--spice-accent) !important;
  padding-bottom: 105px !important;
}

.main-yourLibraryX-listRowSubtitleLeadingWrapper svg {
  fill: var(--spice-accent);
}

.main-yourLibraryX-listRowEntityImage {
  border-radius: var(--border-radius-2);
}

/* Player bar */

[dir='ltr'] .main-coverSlotCollapsed-navAltContainer {
  transform: none !important;
}

.main-nowPlayingBar-nowPlayingBar {
  padding-left: 16px;
  padding-right: 16px;
}

.main-nowPlayingBar-left {
  padding-inline-start: 0px !important;
}

/* Search */

.x-searchInput-searchInputInput {
  padding-left: 18px;
  padding-right: 62px;
}

/* Right sidebar */

.main-buddyFeed-scrollBarContainer {
  height: calc(100% - 105px);
}

.Root__right-sidebar {
  height: calc(100% - 48px);
  position: relative;
  margin-top: 64px;
}

/* Friends activity */

.main-buddyFeed-container {
  border-radius: var(--border-radius-1);
}

.main-buddyFeed-content {
  margin-top: 0 !important;
  padding-bottom: 0 !important;
}

/* Lyrics */

.lyrics-lyrics-coverTopBar {
  padding-top: 0;
}

/* Lyrics Cinema*/

.main-lyricsCinema-container .lyrics-lyrics-container {
  margin-top: 64px;
}

.main-lyricsCinema-controls {
  top: 74px !important;
}

/* Lyrics Plus */

.lyrics-config-button-container {
  bottom: 80px;
}

.lyrics-lyricsContainer-Provider {
  padding-bottom: 105px;
}

.lyrics-lyricsContainer-LyricsUnsyncedPadding {
  height: 15vh;
}

/* Track list */

.main-trackList-trackListHeaderStuck.main-trackList-trackListHeader {
  background: transparent;
}

